Hacked SConstruct to build notes.pdf Commented out two figures and used "make" for several others.

--- a/notes.tex
+++ b/notes.tex
@@ -677,7 +677,7 @@ which ought to be worth something.
 
 \begin{figure*}
   \centering
-    \resizebox{1.05\textwidth}{!}{\includegraphics{Av.pdf}}
+%    \resizebox{1.05\textwidth}{!}{\includegraphics{Av.pdf}}
   \caption{Action of integral operator and its transpose on selected points}
   \label{fig:Av}
 \end{figure*}
@@ -690,7 +690,7 @@ almost has those properties, the resulting eigenvector has a small
 imaginary part and the real parts do not all have the same sign.
 \begin{figure*}
   \centering
-    \resizebox{1.15\textwidth}{!}{\includegraphics{eigenfunction.pdf}}
+%    \resizebox{1.15\textwidth}{!}{\includegraphics{eigenfunction.pdf}}
   \caption{Eigenfunction of integral operator.}
   \label{fig:eigenfunction}
 \end{figure*}
