--- a/notes.tex
+++ b/notes.tex
@@ -1243,7 +1243,18 @@ Differentiating \eqref{eq:Int}  wrt to $g_0$ yields
 
 \section{Appendix}
 \label{sec:appendix}
- 
+
+\subsection{Build Times}
+\label{sec:build-times}
+\begin{center}
+  \begin{tabular}{|l|l|l|l|}
+    \hline
+    Target     & Watcher & Xray-r09 & Orr \\ \hline
+    juq.pdf    & 125:00  & 250:00   & tbd \\
+    notes.pdf  & 2:00    &   3:24   & tbd \\ \hline
+  \end{tabular}
+\end{center}
+
 \subsection{Pricing Measurements: Experimental Design}
 \label{sec:pricing}
 
