start diff.py for plotting approximation errors.  converge.py pickles args

--- a/notes.tex
+++ b/notes.tex
@@ -373,6 +373,16 @@ through $(1, f_1)$ are solutions to
 \subsection{To Do}
 \label{sec:do}
 
+Plot errors
+
+Characterize convergence of $\lambda$ and $\mu$ as $\Delta_h$ and
+$\Delta_g$ get small.  Also dependence on $u$ and $dy$.
+
+As $dy \rightarrow 0$ look for convergence of
+$\mu_{\text{stationary}}$ and characterize $\lambda$ dependence.
+
+Analyze error of quadratic approximation for finite $u$.
+
 \begin{enumerate}
 \item For fixed $u$, find $n_g$ and $n_h$ that get eigenvector error
   below 0.02 for $dy \in \left\{dy_0, dy_1,dy_2 \right\}$ where $dy_k
