Begin study of dh

--- a/notes.tex
+++ b/notes.tex
@@ -410,6 +410,34 @@ Analyze error of quadratic approximation for finite $u$.
 \subsection{Code Performance}
 \label{sec:code}
 
+The command
+\begin{verbatim}
+nohup time python3 converge.py --out_file study_15000_800_08T --n_g0
+2000 --n_g_step 4 --n_g_final 15000 --n_h0 450 --n_h_step 3
+--n_h_final 800 --ref_frac .8 --dy 0.00008
+\end{verbatim}
+died with the following
+\begin{verbatim}
+Command terminated by signal 9
+2592757.31user 3063.76system 121:55:36elapsed 591%CPU (0avgtext+0avgdata 131092600maxresident)k
+30691224inputs+0outputs (2899406major+57075951minor)pagefaults 0swaps
+\end{verbatim}
+I think that it finished the first set of power iterations (each took
+almost exactly 15 minutes) and ran out of memory when it started the
+second set.  If I'm right, then the first eigenvector calculation
+terminated after about 487 iterations.
+
+Running the command
+\begin{verbatim}
+nohup time python3 converge.py --out_file study_8000_800_08T --n_g0 2000 --n_g_step 4 --n_g_final 8000 --n_h0 450 --n_h_step 3 --n_h_final 800 --ref_frac .8 --dy 0.00008 
+\end{verbatim}
+initially used 31g of memory and took 3.5 minutes for each cycle
+(matrix multiply) in power().  After 9500 minutes of cpu time, memory
+use increased to 48g and the cycle time decreased to 73 seconds.
+After about 12900 minutes of cpu time the cycle time dropped to about
+46 seconds and memory use increased to 57g.  As cycle time dropped
+further for smaller operators, the memory use stayed at 56g.
+
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|}
   \hline
   $u\cdot 10^5$ & $dy\cdot 10^4$ & $n_g$ & $n_h$ & build & eig & $n_{\text{states}}$ & 
@@ -439,6 +467,23 @@ those with smaller values of $dy$ terminated after 149 iterations
 without converging.  I erased those times and increased the maximum
 number of iterations to 1000 which was enough for the runs with times
 entered.
+
+By looking at surface plots, I've found the following table of $dg$
+values required to get error down to $\%2$ as a function of $dy$ (I
+have not yet studied $dh$ with care).
+
+\begin{tabular}{|l|l|l|l|l|l|c|}
+  \hline
+  $u\cdot 10^5$ & $dy\cdot 10^4$ & $dg\cdot 10^8$ & $(dy)^2/dg$
+  & 2u/dg &$dh\cdot 10^4$ & filename \\
+  \hline
+  2.0 & 0.8 & .55 & 1.16 &7273& 1.2  & study\_8000\_800\_08T \\
+  2.0 & 1.6 & 2.5 & 1.02 &1600& 1.25 & study\_2500\_800\_16T \\
+  2.0 & 3.2 & 12  & 0.85 &333 & 7.1 & study\_1000\_600\_32T \\ % dg is wrong
+  2.0 & 6.4 & 40  & 1.02 &100 & 5.1  & study\_200\_200\_64T \\
+  %u    dy    dg  dy^2/dg        dh    filename
+  \hline
+\end{tabular}
 
 \subsection{Introduction}
   \label{sec:introduction}
