Before start on mayavi shaw surface

--- a/notes.tex
+++ b/notes.tex
@@ -469,17 +469,17 @@ number of iterations to 1000 which was enough for the runs with times
 entered.
 
 By looking at surface plots, I've found the following table of $dg$
-values required to get error down to $\%2$ as a function of $dy$ (I
-have not yet studied $dh$ with care).
+and $dh$ values required to get error down to $\%2$ as a function of
+$dy$.
 
 \begin{tabular}{|l|l|l|l|l|l|c|}
   \hline
   $u\cdot 10^5$ & $dy\cdot 10^4$ & $dg\cdot 10^8$ & $(dy)^2/dg$
   & 2u/dg &$dh\cdot 10^4$ & filename \\
   \hline
-  2.0 & 0.8 & .55 & 1.16 &7273& 1.2  & study\_8000\_800\_08T \\
-  2.0 & 1.6 & 2.5 & 1.02 &1600& 1.25 & study\_2500\_800\_16T \\
-  2.0 & 3.2 & 12  & 0.85 &333 & 7.1 & study\_1000\_600\_32T \\ % dg is wrong
+  2.0 & 0.8 & .55 & 1.16 &7273& 3.5  & study\_8000\_800\_08T \\
+  2.0 & 1.6 & 2.5 & 1.02 &1600& 5.7  & study\_2500\_800\_16T \\
+  2.0 & 3.2 & 12  & 0.85 &333 & 7.1  & study\_1000\_600\_32T \\ % dg is wrong
   2.0 & 6.4 & 40  & 1.02 &100 & 5.1  & study\_200\_200\_64T \\
   %u    dy    dg  dy^2/dg        dh    filename
   \hline
