--- a/notes.tex
+++ b/notes.tex
@@ -367,6 +367,47 @@ through $(1, f_1)$ are solutions to
 \afterpage{\clearpage} % Flush floats
 
 \newpage
+
+\section{Shaw's EOS}
+\label{sec:shaw}
+
+Here are Eqns.\ 4.6-4.9 of Hixson et al.
+\newcommand{\CJ}{_{\text{CJ}}}
+\begin{align}
+  x(\rho) &= \rho - \rho\CJ \\
+  g(\rho) &= \sum_{i=0}^3 d_i \left( x(\rho) \right) ^i \\
+  f(\rho) &= \sum_{i=0}^6 c_i \left( x(\rho) \right) ^i \\
+  P(\rho,E) &= \rho^3 f(\rho) + g(\rho)(E - E\CJ (\rho) ) \\
+  \label{eq:ecj}
+  E\CJ (\rho) &= E_0 - \int_{V\CJ}^{V(\rho)} \rho^3 f (\rho(V)) dV .
+\end{align}
+Following Eqn.\ 4.9, Hixson et al.\ write
+\begin{align*}
+  \rho\CJ &= 2.4403 \frac{\text{g}}{\text{cm}^3}\\
+  \gamma_S &= 3.038 \\
+  P\CJ &= 35.3 \text{ GPa} .
+\end{align*}
+Changing variable, I write \eqref{eq:ecj} as
+\begin{align*}
+   E\CJ (\rho) &= E_0 - \int_{\rho\CJ}^\rho \rho^3 f(\rho) \frac{dV}
+   {d \rho} d \rho  \\
+   &= E_0 + \int_{\rho\CJ}^\rho \rho f(\rho) d \rho \\
+   &= E_0 + \int_{\rho\CJ}^\rho\sum_{i=0}^6 c_i \rho \left( \rho -
+   \rho\CJ \right) ^i d \rho \\
+   &= E_0 + \int_0^{\rho -\rho\CJ} \sum_{i=0}^6 c_i (r - \rho\CJ) r^i d r \\
+   &= E_0 + \int_0^{\rho -\rho\CJ} \left( \sum_{i=0}^6 c_i r^{i+1}
+     - \sum_{i=0}^6 c_i \rho\CJ r^i \right) d r \\
+   &= E_0 + c_0 \rho\CJ (\rho - \rho\CJ) + \int_0^{\rho -\rho\CJ}
+   \left( \sum_{i=0}^6 c_i r^{i+1}
+     - \sum_{i=1}^6 c_i \rho\CJ r^i \right) d r \\
+   &= E_0 + c_0 \rho\CJ (\rho - \rho\CJ) + \int_0^{\rho -\rho\CJ}
+   \sum_{i=0}^6 \left( c_i - c_{i+1} \rho\CJ \right) r^{i+1} d r
+   \text{ where } c_7 = 0\\
+   &= E_0 + c_0 \rho\CJ (\rho - \rho\CJ) +
+   \sum_{i=0}^6 \frac{ c_i - c_{i+1} \rho\CJ}{i+1} \left( \rho -
+     \rho\CJ \right)^{i+2}
+\end{align*}
+
 \section{First Order}
 \label{sec:first-order}
 
