All states in first.py hav successors

--- a/local.bib
+++ b/local.bib
@@ -53,4 +53,23 @@ ISSN={0018-9448},}
   publisher={American Statistical Association}
 }
 
+@article{fritz96,
+  title={Overdriven-detonation and sound-speed measurements in PBX-9501 and the ‘‘thermodynamic’’Chapman--Jouguet pressure},
+  author={Fritz, JN and Hixson, RS and Shaw, MS and Morris, CE and McQueen, RG},
+  journal={Journal of applied physics},
+  volume={80},
+  number={11},
+  pages={6129--6141},
+  year={1996},
+  publisher={AIP}
+}
 
+@Unpublished{Pemberton9501,
+  author =       {S Pemberton and T Sandoval and T Herrera and J Echave and G Maskaly},
+  title =        {Test report of equation of state measurements of PBX-9501},
+  note =         {LA-UR 11-04999},
+  OPTkey =       {},
+  OPTmonth =     {},
+  OPTyear =      {},
+  OPTannote =    {}
+}
